--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-11 05:29:38
+lastsearch = 2024-07-11 10:52:39
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,14 +12,14 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 58.1%%
-title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
 match = 53.8%%
-title = Bộ chăn ga gối SH_UC22 017
-url = https://songhongonline.vn/products/bo-chan-goi-cao-cap-song-hong-sh-uc22-017
+title = Bộ chăn ga gối SH_UC23 031
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-32
 
 [changagoidemsonghong.com]
 match = 38.7%%
@@ -170,4 +170,9 @@ url = https://archive.org/stream/adictionaryroma01richgoog/adictionaryroma01rich
 match = -42.1%%
 title = THEWESTPIELD LEADER
 url = http://www.digifind-it.com/westfield/leader/1962/1962-10-18.pdf
+
+[bachhoadem.vn]
+match = 48.0%%
+title = Bộ chăn ga gối SH_H18 060
+url = https://bachhoadem.vn/san-pham/bo-chan-ga-goi-sh-h18-060
 
