--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-11 09:04:28
+lastsearch = 2024-07-11 10:47:50
 
 [demxanh.com]
-match = 11.8%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [shopee.vn]
 match = 26.5%%
-title = Chiếu Điều Hoà 3 Lớp - 100%% Cao Su Non Thiên Nhiên
-url = https://shopee.vn/Chiếu-Điều-Hoà-3-Lớp-100-Cao-Su-Non-Thiên-Nhiên-Siêu-Mềm-Siêu-Thoáng-Mát-Giá-Rẻ-Tặng-Kèm-2-Vỏ-Gối-Nằm-i.265839692.22943001761
+title = CHIỀU ĐIỀU HOÀ CAO SU NON COCO TẶNG KÈM 2 VỎ ...
+url = https://shopee.vn/CHIỀU-ĐIỀU-HOÀ-CAO-SU-NON-COCO-TẶNG-KÈM-2-VỎ-GỐI-ĐẦU-(-HÀNG-NHẬP-KHẨU-CAO-CẤP-)-i.426167051.25063833023
 
 [foreverbedding.net]
 match = 32.4%%
