--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-11 05:44:45
+lastsearch = 2024-07-11 10:50:27
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = -42.9%%
-title = CGV Cinemas Vietnam - Sau 4 ngày công ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -23.8%%
+title = Raohe Ẩm Thực Đài | Ho Chi Minh City
+url = https://www.facebook.com/RaoheAmThucDai/
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -82,9 +82,9 @@ title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VIS
 url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -104.8%%
+title = Phim MAI 14/2 chiếu tại Đài Loan m.n có Địa Chỉ Rạp chưa ...
+url = https://www.tiktok.com/@anhvuphunxamtaiwan/video/7349143704650681606?lang=en
 
 [www.travel.taipei]
 match = 19.0%%
@@ -157,9 +157,9 @@ title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt
 url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
 
 [www.instagram.com]
-match = -81.0%%
-title = Photo by REGINA ZILIN TAN on December 10, 2023.
-url = https://www.instagram.com/thebmbshxll/p/C0qw2Y0Sy8q/
+match = -85.7%%
+title = Hộ chiếu của Đài Loan được VisaGuide.World Passport ...
+url = https://www.instagram.com/toiodailoan/p/C8MQfOfxc1N/
 
 [www.hcmulaw.edu.vn]
 match = -90.5%%
