--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-11 08:03:48
+lastsearch = 2024-07-11 10:44:23
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = 14.3%%
@@ -49,7 +49,7 @@ url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap
 [pctravinh.evnspc.vn]
 match = -90.5%%
 title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
 
 [baoapbac.vn]
 match = -47.6%%
