--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-10 22:30:25
+lastsearch = 2024-07-11 10:49:11
 
 [www.linkedin.com]
-match = -145.5%%
-title = Tam Tram - Kansas Army National Guard
-url = https://www.linkedin.com/in/tam-tram-a3286573
+match = -172.7%%
+title = Tam Tran - Wichita, Kansas, United States
+url = https://www.linkedin.com/in/tam-tran-0a0005213
 
 [sos.ks.gov]
 match = -9.1%%
@@ -330,4 +330,9 @@ url = https://www.doi.gov/sites/doi.gov/files/consolidated-doi-forecast-all-bure
 match = -218.2%%
 title = Upcoming Half Marathon Trail Runs in the USA
 url = https://www.runningintheusa.com/classic/list/map/half-marathon/upcoming/trail-run
+
+[www.tiktok.com]
+match = -27.3%%
+title = Ks Tam (@fathertam)
+url = https://www.tiktok.com/@fathertam
 
