--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-11 07:58:51
+lastsearch = 2024-07-11 11:47:11
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -32,9 +32,9 @@ title = Suy Niệm Lời Chúa, Thứ Năm Tuần XIV Thường Niên (11/07 ...
 url = https://www.youtube.com/watch?v=Z82axodugRo
 
 [tuyensinh247.com]
-match = -225.0%%
-title = Một con lắc đơn có chiều dài dây treo l = 90 cm, khối lượng ...
-url = https://tuyensinh247.com/bai-tap-18187.html
+match = -218.8%%
+title = Con lắc lò xo có vật nặng khối lượng m = 100g, chiều dài ...
+url = https://tuyensinh247.com/bai-tap-62416.html
 
 [asisov.org.vn]
 match = -125.0%%
