--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-11 13:21:34
+lastsearch = 2024-07-11 16:31:59
 
 [dreamland.vn]
 match = -32.0%%
@@ -28,8 +28,8 @@ url = http://unicom.mx/micrositios.aspx?i=https://xn--18-6kcaa2cmqgaegdjggepph9y
 
 [newsin.ir]
 match = -116.0%%
-title = شعر عن اليوم الوطني ٩٢ The moms co review Labial maybelline ...
-url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://dwtao.ru/5826917wwwgoldenpondercomhk4fe43y
+title = Lk baden radiologie Cinepolis cartelera ensenada Sigcorp 1 rm ...
+url = https://newsin.ir/fa/frame.html?href=https://dsrpo.ru/2163975kpdf50j119der88fbsmobi4fe80y
 
 [shopee.vn]
 match = 56.0%%
@@ -37,9 +37,9 @@ title = Vỏ gối Dreamland AB69 45x45
 url = https://shopee.vn/Vỏ-gối-Dreamland-AB69-45x45-i.93358705.5636350905
 
 [www.museum.ru]
-match = -124.0%%
-title = rucalhue: Waffel rezept ohne milch Tanggal lahir greta irene ...
-url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://dwtao.ru/fm1T5UQ11fe43v
+match = -112.0%%
+title = Linzer augen ohne ei Water bear tardigrade Liverpool joueurs ...
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=https://xn-----7kcbchbkox0ag5apb3asrb4o.xn--p1ai/58479261rfe43a
 
 [aconcept-vn.com]
 match = 33.3%%
@@ -75,4 +75,9 @@ url = http://www.rophidas.ro/page.php?url=http://баймао.рф/5ta0uSj11fe43
 match = 24.0%%
 title = Chăn Ga Gối Đệm Dreamland
 url = https://www.facebook.com/Dreamland.com.vn/
+
+[www.qcyc.ca]
+match = -40.0%%
+title = 2024 Ryba w cieście piwnym kwestia smaku
+url = https://www.qcyc.ca/?q=node/109&height=730&scroll=auto&url=https://nsp47.ru/8639742fe43y
 
