--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-11 16:13:53
+lastsearch = 2024-07-11 16:34:48
 
 [m.youtube.com]
 match = -144.4%%
@@ -27,9 +27,9 @@ title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
 url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -166.7%%
-title = Phát hiện quán nem nướng gần đại học thủ dầu một 1 mẹt ...
-url = https://www.tiktok.com/@hauobinhduong/video/7327600133422550290
+match = -133.3%%
+title = Nem nướng Chấn Hưng gia truyền nổi tiếng ở quận 5 ...
+url = https://www.tiktok.com/@tinhtungtangvn/video/7350226094391364866
 
 [www.youtube.com]
 match = -150.0%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -127.8%%
-title = Sẵn vỏ bò bía cuộn nem size 18 tại Hà Nội. Sỉ 2x nhỏ
-url = https://m.facebook.com/groups/544554912403747/posts/2329390520586835/
+match = -105.6%%
+title = Ăn vặt ngon Cali | NEM CHUA HỦ $65 ( 50 cái )
+url = https://m.facebook.com/groups/anvatngoncali/posts/8357068874306053/
 
 [www.proz.com]
 match = -183.3%%
