--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-11 14:49:50
+lastsearch = 2024-07-11 16:47:18
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,19 +12,19 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 32.3%%
+title = Chăn ga gối Singapore đệm tròn CIRCLE18
+url = https://demxanh.com/chan-ga-goi-singapore-dem-tron-circle18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UC23 035
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-035
+match = 57.7%%
+title = Bộ chăn ga gối SH_UC22 018
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-uc22-018
 
 [changagoidemsonghong.com]
-match = 38.7%%
-title = Bộ chăn ga gối Walt Disney mã mầu YC22012
-url = https://changagoidemsonghong.com/chan-ga-goi-yc22012
+match = -29.0%%
+title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
+url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
 
 [foreverbedding.net]
 match = -3.2%%
