--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-11 12:48:36
+lastsearch = 2024-07-11 16:47:29
 
 [www.zillow.com]
 match = -69.2%%
@@ -102,9 +102,9 @@ title = GA Color Moisturizing Lip Beauty 18 Ladies Wear Cup ...
 url = https://www.walmart.com/ip/GA-Color-Moisturizing-Lip-Beauty-18-Ladies-Wear-Cup-Long-Lasting-Non-Stick-Lip-Gloss-Long-Lasting-Gloss-Non-Fading-Lipstick/3206017657
 
 [www.regmovies.com]
-match = -223.1%%
-title = Regal Hollywood - Gainesville Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
+match = -215.4%%
+title = Regal Hollywood @ North I-85 Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
 match = -61.5%%
@@ -420,4 +420,9 @@ url = https://www.jonesfh.org/obituary/Stefania-Thompson
 match = -200.0%%
 title = Deutsch 0462-005-20141 Size 20 Contact 18-16 Ga
 url = https://www.deutschconnectorstore.com/p-701-deutsch-0462-005-20141-contact-18-16-ga.html
+
+[mangadex.org]
+match = -307.7%%
+title = Koko wa Ore ni Makasete Saki ni Ike to Itte kara 10-nen ga ...
+url = https://mangadex.org/title/66f42f5f-bcb7-437b-9ae5-752c84bce709/koko-wa-ore-ni-makasete-saki-ni-ike-to-itte-kara-10-nen-ga-tattara-densetsu-ni-natte-ita
 
