--- a/images/nem-dreamland-uc-180x200x14/config.ini
+++ b/images/nem-dreamland-uc-180x200x14/config.ini
@@ -4,10 +4,30 @@ url = https://www.diepxuan.com/nem-dreamland-uc-180x200x14.html
 lastopen = 2024-06-06 16:44:35
 
 [search]
-lastsearch = 2024-07-11 10:51:55
+lastsearch = 2024-07-11 16:50:29
 
 [www.diepxuan.com]
 match = 100.0%%
 title = Nệm Dreamland Úc 180x200x14
 url = https://www.diepxuan.com/nem-dreamland-uc-180x200x14.html
+
+[www.michaelmarkowski.com]
+match = -100.0%%
+title = Dreamland
+url = https://www.michaelmarkowski.com/music/dreamland/
+
+[www.amazon.com]
+match = -85.2%%
+title = So far so good.. just concerned with the gel, over time.
+url = https://www.amazon.com/portal/customer-reviews/mobile-media-feed/B01N2UDS59?physicalId=61gnxFQ1kLL&imageExtension=jpg&reviewId=R3IPB6FJOG69LM
+
+[forum.mattressunderground.com]
+match = -63.0%%
+title = Pulled the trigger today and purchased the Dreamfoam ...
+url = https://forum.mattressunderground.com/t/pulled-the-trigger-today-and-purchased-the-dreamfoam-ultimate-dreams-13inch-gel-memory-foam/6902
+
+[www.instagram.com]
+match = -88.9%%
+title = You guys, I am so excited to share with you my amazing ...
+url = https://www.instagram.com/p/CLmeW3fHYHe/
 
