--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-11 13:45:51
+lastsearch = 2024-07-11 16:45:16
 
 [www.cms.gov]
 match = 4.5%%
@@ -177,8 +177,8 @@ title = Farm houses for sale in new hampshire [mJROCi]
 url = https://www.nitrc.org/links/?group_id=51&url=https://4835712.detsad147vrn.ru/5487923u6fe43a
 
 [explore.omsystem.com]
-match = 0.0%%
-title = 
+match = -12.5%%
+title = TG-7 - OM System
 url = https://explore.omsystem.com/us/en/tg-7
 
 [www.sohoonline.org]
@@ -560,4 +560,14 @@ url = https://amateurphotographer.com/review/om-system-tough-tg-7-review-raw-mak
 match = 0.0%%
 title = 
 url = https://www.parkcameras.com/blog/reviews/om-system-tough-tg-7-review_action-13-9
+
+[www.csac.ca.gov]
+match = -35.7%%
+title = CSPP Site List
+url = https://www.csac.ca.gov/sites/main/files/file-attachments/gstg_cspp_list.xlsx?1710170977
+
+[www.monashfodmap.com]
+match = 0.0%%
+title = FODMAP Dietitians Directory
+url = https://www.monashfodmap.com/online-training/fodmap-dietitians-directory/
 
