--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-11 15:24:06
+lastsearch = 2024-07-11 16:50:11
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [demre.com.vn]
 match = 18.2%%
