--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-11 16:44:32
+lastsearch = 2024-07-11 17:38:16
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -253.3%%
-title = Black Kingdom - D2 - Milio E - Cái Ôm Ấm Áp: - Hồi chiêu ...
-url = https://www.facebook.com/photo.php?fbid=822787286517092&id=100063574839369&set=a.647966903999132&locale=mt_MT
+match = -13.3%%
+title = Ways Station Gaming
+url = https://www.facebook.com/waysstation/posts/ways-station-14-hoàn-thiện-thi-công-sẵn-sàng-xuất-quân-chỉ-còn-ít-ngày-nữa-thôi-/1026295534467736/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -127,9 +127,9 @@ title = Máy chiếu Sony VPL-DX221 - Digiplus
 url = https://digiplus.vn/may-chieu-sony-vpl-dx221/
 
 [batdongsan.com.vn]
-match = -200.0%%
-title = Chung cư D2 Giảng Võ - Mua Bán Căn Hộ Chung Cư T7/ ...
-url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
+match = -180.0%%
+title = Mua bán nhà đất tại đường Số 14, Thành phố Thủ Đức
+url = https://batdongsan.com.vn/nha-dat-ban-duong-so-14-phuong-linh-chieu
 
 [luatvietnam.vn]
 match = -220.0%%
