--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-11 17:14:03
+lastsearch = 2024-07-11 17:37:53
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=t_SbqW_GD5E
 [books.google.com]
 match = -231.2%%
 title = CVCUL NCKT 1 và 2 Sử kí, E-xơ-ra, Nê-hê-mi và Ê-xê-tê - Kì 2
-url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash12p3VIS&sig=ACfU3U0trERykigjXjeCV82evlrWcNVHFg&hl=en&sa=X&ved=2ahUKEwijssOt4J6HAxWo4MkDHQ1sB1QQ6AF6BAgXEAM
+url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash12p5PLT&sig=ACfU3U09eMfxs3Vu0jyMQfJ0X2boKmMMBQ&hl=en&sa=X&ved=2ahUKEwjWzOTX5Z6HAxUu4ckDHQRjDPsQ6AF6BAghEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
