--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-11 15:46:03
+lastsearch = 2024-07-11 17:39:37
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = 9.7%%
-title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
-url = https://demxinh.vn/chan-ga-goi-dreamland/
+match = -29.0%%
+title = Chiếu điều hoà có chống thấm không? Sử dụng loại nào tốt
+url = https://demxinh.vn/tin-tuc/chieu-dieu-hoa-co-chong-tham-khong.html
 
 [dongahome.vn]
 match = 3.2%%
