--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-11 15:40:11
+lastsearch = 2024-07-11 17:36:50
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -295,4 +295,9 @@ url = https://www.sleepfoundation.org/bedroom-environment/blue-light
 match = -21.4%%
 title = Ice Skating & Hockey
 url = https://evergreenrecreation.com/224/Ice-Skating-Hockey
+
+[www.biblegateway.com]
+match = -150.0%%
+title = Resansman 16,Nombres 16,Numbers 16 VKF;BDS;KJV
+url = https://www.biblegateway.com/passage/?search=Resansman 16,Nombres 16,Numbers 16&version=VKF;BDS;KJV;NKJV
 
