--- a/images/nem-foam-nami-180x200x15/config.ini
+++ b/images/nem-foam-nami-180x200x15/config.ini
@@ -3,3 +3,11 @@ path = nem-foam-nami-180x200x15
 url = https://www.diepxuan.com/nem-foam-nami-180x200x15.html
 lastopen = 2024-07-11 17:09:40
 
+[search]
+lastsearch = 2024-07-11 17:33:35
+
+[vuanem.com]
+match = -100.0%%
+title = Nệm Foam
+url = https://vuanem.com/blog/chuyen-gia-nem/nem-foam
+
