--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-11 17:14:25
+lastsearch = 2024-07-11 17:36:32
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-7ecUkecg&sig=ACfU3U1YJ_R59AlRDyuKssI7NdJhjF-eLw&hl=en&sa=X&ved=2ahUKEwjS5Pyq2tGGAxVkD1kFHc2aBHgQ6AF6BAgnEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -52.2%%
+title = USD TO ILS TODAY AND FORECAST TOMORROW, MONTH
+url = https://30rates.com/usd-to-ils-today-forecast-dollar-to-israeli-shekel
 
 [www.ncbi.nlm.nih.gov]
 match = -108.7%%
